--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongoose": "^6.4.4",
+    "nodemon": "^2.0.20",
     "razorpay": "^2.8.3",
     "start": "^5.1.0"
   }
