--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,7 +15,6 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongoose": "^6.4.4",
-    "nodemon": "^2.0.20",
     "razorpay": "^2.8.3",
     "start": "^5.1.0"
   }
